<resources>

    <string name="btn_inbound_back">F3 Back</string>

    <string name="symbolStart">F8 &lt;</string>
    <string name="symbolEnd">&gt; F4</string>

    <string name="prompt_email">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    <string name="action_menu1">Select Inbound Task</string>-->
    <string name="action_menu1">Procesar tarea de entrada mercancía</string>
    <!--    <string name="action_menu2">Select Internal Task</string>-->
    <string name="action_menu2">Procesar tarea interna</string>
    <!--    <string name="action_menu3">Select Outbound Task</string>-->
    <string name="action_menu3">Procesar tarea de salida de mercancía</string>
    <string name="action_menu4">System Guided By Folder</string>
    <string name="action_menu5">Select Open Task</string>
    <!--    <string name="action_menu6">Goods Movement</string>-->
    <string name="action_menu6">Movimiento de mercancías</string>
    <string name="action_menu7">Request Replenishment</string>
    <string name="action_menu8">Request Removal</string>
    <!--    <string name="action_menu9">Logistics Area Count</string>-->
    <string name="action_menu9">Recuento de área logística</string>


    <string name="app_name">Logistica</string>
    <!--    <string name="btn_main_inbound">Select Inbound Task</string>-->
    <string name="btn_main_inbound">Procesar tarea de entrada mercancia</string>
    <string name="btnBack">F8 &lt;</string>
    <string name="btnNext">&gt; F4</string>
    <!--    <string name="txtTitleOutbound">Select an Outbound Task</string>-->
    <string name="txtTitleOutbound">Procesar una tarea de Salida de mercancia</string>
    <!--    <string name="txtHintImput">Insert Data</string>-->
    <string name="txtHintImput">Ingresar Información</string>
    <!--    <string name="btnStarTask">F5 Start Task</string>-->
    <string name="btnStarTask">Iniciar Tarea</string>
    <!--    <string name="lblTaskId">Task ID</string>-->
    <string name="lblTaskId">No. Tarea</string>
    <string name="lblTaskValue">121 Pick</string>
    <!--    <string name="lblOrderId">Order ID</string>-->
    <string name="lblOrderId">ID Pedido de compra</string>
    <string name="lblOrdeValue">365</string>

    <string name="txtTitlePutAwayTarget">Put Away 124: Target</string>
    <!--    <string name="btnConfirmTask">F5 Confirm</string>-->
    <string name="btnConfirmTask">Confirmar</string>

    <!--    <string name="lblTarget">Target</string>-->
    <!--  <string name="lblTarget">Área logistica destino</string>  -->
    <string name="lblTarget">A. Destino</string>
    <!--    <string name="lblProduct">Product ID</string>-->
    <string name="lblProduct">ID de Producto</string>
    <string name="lblOpen">Open</string>
    <string name="lblActual">Actual</string>
    <string name="lblIdent">Ident. Stock</string>
    <string name="lblRestricted">Restricted</string>
    <string name="lblSerial">Serial number</string>
    <string name="lblLuQty">LU Qty</string>
    <string name="lblBarCode">Bar Code</string>
    <string name="lblCount">1 of 1</string>


    <string name="txtTitlePickService">Pick 131: Área logistica origen</string>
    <!--    <string name="btnConfirmItem">F5 Confirm Item</string>-->
    <string name="btnConfirmItem">Confirmar Artículo</string>
    <!--    <string name="lblService">Source</string>-->
    <string name="lblService">Área logistica origen</string>
    <string name="lblAreaLogisticaShorDesc">Área Origen</string>
    <string name="lblNameProduct">Nombre</string>
    <!--    <string name="lblProductServ">Product</string>-->
    <string name="lblProductServ">Producto</string>
    <string name="lblTitleGas">Gas Boiler Combi 75</string>
    <string name="lblStockId">ID STOCK</string>
    <string name="lblStock">Stock</string>
    <string name="btnReverse">F6 Reverse</string>
    <string name="btnFNueve">F9 = 0</string>
    <string name="btnReportedItems">F7 Reported Items</string>


    <!--    <string name="txtTitleTargetConfirm">Pick 131: Target</string>-->
    <string name="txtTitleTargetConfirm">Pick 131: Área logistica destino</string>
    <!--    <string name="btnConfirm">F5 Confirm</string>-->
    <string name="btnConfirm">Confirmar</string>

    <string name="txtTitleRemaining">Process Remaining Quantity</string>
    <string name="lblWarning">Task incomplete; choose one of the following options or go back and confirm full quantity</string>

    <string name="btnConfirmPartially">F5 Confirm Partially</string>
    <string name="btnSplitItem">F9 Split Item</string>
    <string name="btnSplitDelivery">F4 Split Delivery</string>
    <string name="btnReportDeviation">F6 Report Deviation</string>
    <string name="lblDeviationReason">Deviation Reason</string>

    <string name="txtTitleTaskConfirm">Pick List 131</string>
    <string name="btnDetails">F7 Details</string>
    <string name="btnClearQuery">F9 Clear Query</string>


    <!--    <string name="lblLogisticTitle">Logistics Area Count</string>-->
    <string name="lblLogisticTitle">Recuento de Area Logistica</string>
    <string name="lblLogisticMain">Replenish by Logistics Area and Product</string>
    <string name="lblLogistic">Replenish by Production Order</string>
    <string name="lblArea">Area</string>

    <string name="lblOrder">Order</string>
    <!--    <string name="btnScan">Scan</string>-->
    <string name="btnScan">Escanear</string>
    <string name="cheDistinctLogisticArea">Distinct Logistic Area</string>


    <!--    <string name="lblLogisticDesTitle">Logistics Area Count Description</string>-->
    <string name="lblLogisticDesTitle">Recuento de Area Logistica Descripción</string>
    <string name="lblQuantity">Quantity</string>
    <string name="lblLU">LU</string>
    <string name="lblLUQty">LU Qty</string>
    <string name="lblInspectionId">Inspection Id</string>

    <string name="lblReference">Reference</string>
    <string name="lblLabelId">Label ID</string>


    <string name="btnModify">Modify</string>

    <!--    <string name="lblGoodsTitle">Goods Movement</string>-->
    <string name="lblGoodsTitle">Movimiento de Mercancías</string>

    <!--    <string name="lblTitleGoodsMovementSource">Confirm Source</string>-->
    <string name="lblTitleGoodsMovementSource">Confirmar Área logistica origen</string>

    <!--    <string name="lblSource">Source</string>-->
    <!--  <string name="lblSource">Área logistica origen</string>  -->
    <string name="lblSource">A. Origen</string>
    <!--    <string name="lblProductSimple">Product</string>-->
    <string name="lblProductSimple">Producto</string>
    <string name="lblQty">Qty</string>
    <string name="lblPrs">PRS</string>
    <string name="lblFieldName">FieldName</string>

    <!--    <string name="lblTitleGoodsMovementTarget">Confirm Target</string>-->
    <string name="lblTitleGoodsMovementTarget">Confirmar Área logistica destino</string>

    <!--    <string name="btnConfirmTaskDesc">Confirm Task</string>-->
    <string name="btnConfirmTaskDesc">Confirmar Tarea</string>

    <!--    <string name="btnConfirmItemDesc">Confirm</string>-->
    <string name="btnConfirmItemDesc">Confirmar</string>

    <string name="btnBackSmall">&lt;</string>
    <string name="btnNextSmall">&gt;</string>
    <string name="btnBackDes">F3 Back</string>

    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>

    <string name="scanner_activity">CODIGO DE BARRAS</string>
    <string name="scanner_fragment_activity">CODIGO DE BARRAS</string>
    <string name="simple_scanner_activity">CODIGO DE BARRAS</string>
    <string name="simple_scanner_fragment_activity">CODIGO DE BARRAS</string>
    <string name="simple_activity_sample">CODIGO DE BARRAS</string>
    <string name="simple_fragment_sample">CODIGO DE BARRAS</string>
    <string name="activity_sample">CODIGO DE BARRAS</string>
    <string name="fragment_sample">CODIGO DE BARRAS</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="InsertData">Ingresar Información</string>
    <string name="PlannedQuantity">Cantidad Planeada</string>
    <string name="Product">Producto</string>
    <string name="TaskId">No. Tarea</string>
    <string name="BarCodeId">Código de Barras</string>
    <string name="LabelId">No. Etiqueta</string>
    <string name="ReferenceId">No. Ref</string>

    <string name="SiteID">ID de Sede</string>
    <string name="EmpresaId">ID de Empresa</string>
    <string name="ExternalItemID">ID Ext. Posición</string>

    <string name="ttlMappingProducts">Asignar nuevo producto</string>
    <string name="lblBarCodeGlb">Código de Barras</string>


    <string name="lblNombreGlb">Nombre</string>
    <string name="lblDescripcionGlb">Descripción</string>
    <string name="lblCodigoBarrasGlb">Código de Barras</string>
    <string name="lblEstadoGlb">Activo</string>
    <string name="lblUsuarioGlb">Usuario</string>
    <string name="btnGuardarGlb">Guardar</string>
    <string name="btnConsultarGlb">Consultar</string>

    <string name="ttlRegistrarProductosGlb">Resumen de Stock</string>

    <string name="CMATERIAL_UUID">ID Producto</string>
    <string name="CSITE_UUID">ID Sede</string>
    <string name="CLOG_AREA_UUID">A. Logística</string>

    <string name="ProductId">ID Producto</string>
    <string name="ProductDesc">Nombre</string>

    <string name="btnAsignarTodos">Reg. Todos</string>
    <string name="btnAsignarNoAsignados">Reg. No Asignados</string>

    <string name="ttlAssignBarCode">Asignar código de barras</string>

    <string name="chkConfirmedGlb">Confirmado</string>

    <string name="lblLogisticAreaSource">A. Log. Origen</string>

    <string name="lblScanProd">Esc. Prod.</string>

    <string name="btnMenuConfirmacionEmbarques">Confirmación de Embarques</string>

    <string name="btn_main_ShipmentConfirm">Confirmación de Embarques</string>

    <string name="ttlConfirmacionEmbarques">Confirmación de Embarque</string>

    <string name="lblItemsTaskConfirmation">Confirmación de Tarea</string>

    <string name="btnConsultarTarea">Consultar Tarea</string>

    <string name="btnVerDetalles">Ver Productos</string>

    <string name="lblCantidad">Cantidad</string>

    <string name="Quantity">Cantidad</string>

    <string name="lblNSerial">Cod. Barras</string>

    <string name="lblCaja">Caja</string>
    <string name="lblCodigoCaja">Código Caja</string>
    <string name="lblCantidadCaja">Cantidad Caja</string>

</resources>
